--- a/API.Automation/test-output/old/Default suite/methods.html
+++ b/API.Automation/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="706f79">  <td>24/01/19 09:32:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ex1.postf()[pri:0, instance:post_get.Ex1@6dc17b83]">postf</td> 
+<tr bgcolor="706f79">  <td>24/01/19 20:46:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDelete.testPut()[pri:0, instance:post_get.PutPatchDelete@5e0826e7]">testPut</td> 
   <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/01/19 09:32:40</td>   <td>-2873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ex1.gf()[pri:0, instance:post_get.Ex1@6dc17b83]">gf</td> 
+<tr bgcolor="706f79">  <td>24/01/19 20:46:28</td>   <td>-2753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDelete.testDelete()[pri:0, instance:post_get.PutPatchDelete@5e0826e7]">testDelete</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="706f79">  <td>24/01/19 20:46:30</td>   <td>-528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutPatchDelete.testPatch()[pri:0, instance:post_get.PutPatchDelete@5e0826e7]">testPatch</td> 
   <td>main@1995265320</td>   <td></td> </tr>
 </table>
