--- a/API.Automation/test-output/emailable-report.html
+++ b/API.Automation/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,340</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,179</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">post_get.Ex1</td><td><a href="#m0">gf</a></td><td rowspan="1">1705678360696</td><td rowspan="1">2869</td></tr><tr class="passedeven"><td><a href="#m1">postf</a></td><td rowspan="1">1705678363569</td><td rowspan="1">424</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">post_get.PutPatchDelete</td><td><a href="#m0">testDelete</a></td><td rowspan="1">1705718788229</td><td rowspan="1">2217</td></tr><tr class="passedeven"><td><a href="#m1">testPatch</a></td><td rowspan="1">1705718790454</td><td rowspan="1">524</td></tr><tr class="passedeven"><td><a href="#m2">testPut</a></td><td rowspan="1">1705718790981</td><td rowspan="1">355</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">post_get.Ex1#gf</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">post_get.Ex1#postf</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">post_get.PutPatchDelete#testDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">post_get.PutPatchDelete#testPatch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">post_get.PutPatchDelete#testPut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
